<resources xmlns:Campus="http://schemas.android.com/tools">
    <string name="app_name">Class Organizer</string>
    <string name="main_title">Classes</string>
    <string name="edit_title">Edit</string>
    <string name="settings_title">Settings</string>
    <string name="add_title">Add</string>
    <string name="auth_email">classorganizerdiu@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="title_notifications">Notifications</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">This app will stop receiving updates after Fall 2019. Thank you for being a part of the journey!</string>
    <string name="level_title">Select Level</string>
    <string name="term_title">Term</string>
    <string name="section_title">Section</string>
    <string name="program_title">Select your program</string>
    <string name="drawer_app_title">Class Organizer</string>
    <string name="drawer_dev_email">musfiqus@gmail.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_initial_label">Edit Initial</string>
    <string name="teacher_initial_hint">Teacher\'s Initial</string>
    <string name="choose_weekday_label">Choose Weekday</string>
    <string name="edit_room_no_label">Edit Room No</string>
    <string name="room_no_hint">Room No</string>
    <string name="share_title">Share link using</string>
    <string name="share_text_extra">Check out this awesome class routine android app for DIU CSE students at https://play.google.com/store/apps/details?id=bd.edu.daffodilvarsity.classorganizer</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_share">Share</string>
    <string name="drawer_title_report">Report a problem</string>
    <string name="edit_popup">Edit</string>
    <string name="save_popup_title">Save</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="course_title_hint">Course Title</string>
    <string name="enter_course_title">Enter Course Title</string>
    <string name="course_code">Course Code</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="enter_initial">Enter Initial</string>
    <string name="enter_room_no">Enter Room No</string>
    <string name="starting_time">Starting Time</string>
    <string name="ending_time">Ending Time</string>
    <string name="edit_course_title">Edit Course Title</string>
    <string name="time_delay_summary">"Currently you're receiving reminders &lt;b>%1$s&lt;/b> before the class"</string>
    <string name="notification_enabled_summary">Class notifications are currently enabled</string>
    <string name="notification_disabled_summary">Class notifications are currently disabled</string>
    <string name="ramadan_enabled_summary">Ramadan timetable is enabled</string>
    <string name="ramadan_disabled_summary">Ramadan timetable is disabled</string>
    <string name="user_preference_summary">Current User Type: &lt;b>%1$s&lt;/b></string>
    <string name="department_preference_summary">Current Department: &lt;b>%1$s&lt;/b>, Program: &lt;b>%2$s&lt;/b>, Campus: &lt;b>%3$s&lt;/b></string>
    <string name="routine_preference_summary_student">"Current Section: &lt;b>%1$s&lt;/b>, Level: &lt;b>%2$d&lt;/b>, Term: &lt;b>%3$d&lt;/b></string>
    <string name="routine_preference_summary_teacher">"Current User: &lt;b>%1$s&lt;/b></string>
    <string name="limit_preference_enabled_summary">Currently your modifications will show up only on your modified section</string>
    <string name="limit_preference_disabled_summary">Currently your modifications will show up on all sections</string>
    <string name="empty_search_hint">You can search by course code or course name or teacher\'s initial or room no</string>
    <string name="not_found_search_hint">No classes found</string>
    <string name="not_found_search_hint_room">No rooms found</string>
    <string name="course_title">Course title</string>
    <string name="abc_course">ABC COURSE</string>
    <string name="teacher_s_initial">Teacher\'s initial</string>
    <string name="tm">TM</string>
    <string name="weekday">Day</string>
    <string name="zenday">Zenday</string>
    <string name="room_no">Room No</string>
    <string name="time">Time</string>
    <string name="_10_00_am_11_30_am">10.00 AM - 11.30 AM</string>
    <string name="room">Room</string>
    <string name="communicate">Communicate</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="search_by_code">Search by Code</string>
    <string name="search_by_title">Search by Title</string>
    <string name="search_by_teacher">Search by Teacher</string>
    <string name="search_by_room">Search by Room</string>
    <string name="delete">Delete</string>
    <string name="suggestion_email_subject">Add section to Class Organizer</string>
    <string name="contact_mailll">Contact: musfiqus@gmail.com</string>
    <string name="send_mail">SEND EMAIL</string>
    <string name="user_settings_changed">User settings changed</string>
    <string name="dept_settings_changed">Department settings changed</string>
    <string name="user_popup_title">Choose User Type</string>
    <string name="dept_popup_title">Choose Your Department</string>
    <string name="no_changes">No changes were made</string>
    <string name="warning">Warning!</string>
    <string name="warning_msg">Your saved routine and preferences will be reset upon changing this settings. Do you want to proceed?</string>
    <string name="proceed">PROCEED</string>
    <string name="dont_show_this_again">Don\'t show this again</string>
    <string name="saved">Saved!</string>
    <string name="reset_title">Select Classes To Reset</string>
    <string name="deleted">Deleted</string>
    <string name="edited">Edited</string>
    <string name="added">Added</string>
    <string name="saved_nonexc">Saved</string>
    <string name="reset">RESET</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="already_updated_text">You already have the latest routine! Press Next</string>
    <string name="downloading_update_text">Downloading updated routine</string>
    <string name="update_check_error">Unable to check for update. Press Next</string>
    <string name="update_successful_text">Routine updated! Press Next</string>
    <string name="update_failed_text">Update failed! Press Next</string>
    <string name="skip">SKIP</string>
    <string name="check_latest_routine_text">Checking for latest routines</string>
    <string name="notification_channel_name">Classes</string>
    <string name="how_are_you_going_to_use_the_app">How are you going to use the app?</string>
    <string name="select_your_initial">Select your initial</string>
    <string name="title_activity_search_refined">SearchRefinedActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advanced">Advanced</string>
    <string name="hide">Hide</string>
    <string name="enter_search_phrase">Enter search phrase</string>
    <string name="select_search_options">Select search options</string>
    <string name="available">Available</string>
    <string name="status">Status</string>
    <string name="silhouette">Silhouette</string>
    <string name="day">Day</string>
    <string name="mute_action">MUTE</string>
    <string name="mute_action_filter">bd.edu.daffodilvarsity.classorganizer.receiver.MUTE_ACTION</string>
    <string name="notification_publisher_filter">bd.edu.daffodilvarsity.classorganizer.receiver.NOTIFICATION_PUBLISHER</string>
    <string name="muted_text">Muted</string>
    <string name="unmuted_Text">Unmuted</string>
    <string name="update_error_toast">Unable check for updates.</string>
    <string name="download_failed_welcome">Download failed. Press NEXT</string>
    <string name="push_notification_channel_id">notification_channel_03</string>
    <string name="routine_update_ticker">New routine available!</string>
    <string name="update_action">UPDATE</string>
    <string name="update_error">Unable to check for update!</string>
    <string name="checking_update">Checking for updates</string>
    <string name="download_update">Downloading update</string>
    <string name="routine_updated">Routine successfully updated</string>
    <string name="already_updated">You already have the latest routines</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="user_not_selected">Select a profile to continue</string>
    <string name="campus_picker_rationale">Select your campus from choices available below.\nDaffodil International University currently has three campuses. Dhanmondi (Main), Ashulia (Permanent) and Uttara.</string>
    <string name="campuses">Campuses</string>
    <string name="no_campus">No campus selected</string>
    <string name="select_campus_to_continue">Select a campus to continue</string>
    <string name="select_your_level_amp_term"><![CDATA[Select your level & term]]></string>
    <string name="select_level_term"><![CDATA[Select level & term]]></string>
    <string name="level_term_not_selected">No level or term selected</string>
    <string name="initial_not_selected">No initials selected</string>
    <string name="term_rationale">Select your term, also known as semester per year, below.</string>
    <string name="term">Term</string>
    <string name="level_rationale">Select your level, also known as academic year, below.</string>
    <string name="level">Level</string>
    <string name="select_teacher_initial">Select your teacher\'s initial</string>
    <string name="select_initial">Select initial</string>
    <string name="select_campus">Select campus</string>
    <string name="select_your_campus">Select your campus</string>
    <string name="initials_error">Unable to find any initials</string>
    <string name="selected_initial">Selected initial: %1$s</string>
    <string name="selected_level_term">Level: %1$d, Term: %2$d</string>
    <string name="select_department">Select department</string>
    <string name="no_department_selected">No department selected</string>
    <string name="campus_error">Error loading campuses</string>
    <string name="program_rationale">Select your program. DIU currently has both Day and Evening programs</string>
    <string name="program">Program</string>
    <string name="select_your_department">Select your department</string>
    <string name="no_program_selected">No program selected</string>
    <string name="department_rationale">Select your department. For example: CSE</string>
    <string name="program_error">Unable to find programs!</string>
    <string name="selected_department">Department: %1$s</string>
    <string name="selected_program">Program: %1$s</string>
    <string name="press_to_get_started">Press ✓ to get started</string>
    <string name="validating_setup">Validating setup…</string>
    <string name="section_rationale">Select the section you\'re in. Should be a no brainer right?</string>
    <string name="section">Section</string>
    <string name="sections_Error">Unable to find any sections</string>
    <string name="no_section_selected">No section selected</string>
    <string name="select_section">Select section</string>
    <string name="select_your_section">Select your section</string>
    <string name="selected_section">Section: %1$s</string>
</resources>