<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group />
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_title_settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/drawer_title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_bug_report_24dp"
                android:title="@string/drawer_title_report" />
        </menu>
    </item>

</menu>
