<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/search_option_routine_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/md_black_1000"
        android:text="@string/enter_search_phrase"
        android:layout_gravity="center"
        android:padding="8dp"
        />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/search_routine_input"
        android:layout_margin="8dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/search_advanced_button_routine"
        android:layout_margin="8dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:layout_gravity="center"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/advanced" />
    <RelativeLayout
        android:id="@+id/search_routine_advanced_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:visibility="gone">
        <CheckBox
            android:id="@+id/search_by_code_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_by_code"/>
        <CheckBox
            android:id="@+id/search_by_title_check"
            android:layout_below="@id/search_by_code_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_by_title"/>
        <CheckBox
            android:id="@+id/search_by_teacher_check"
            android:layout_below="@id/search_by_title_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_by_teacher"/>
        <CheckBox
            android:id="@+id/search_by_room_check"
            android:layout_below="@id/search_by_teacher_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_by_room"/>
    </RelativeLayout>

</LinearLayout>