<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/class_spinner_layout_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/section_spinner_label"
        style="@style/SpinnerTitle"
        android:text="@string/section_title" />

    <Spinner
        android:id="@+id/section_selection"
        style="@style/SpinnerStyle"
        android:completionThreshold="1" />

    <TextView
        android:id="@+id/level_spinner_label"
        style="@style/SpinnerTitle"
        android:layout_marginTop="16dp"
        android:text="@string/level_title" />

    <Spinner
        android:id="@+id/level_spinner"
        style="@style/SpinnerStyle" />

    <TextView
        android:id="@+id/term_spinner_label"
        style="@style/SpinnerTitle"
        android:layout_marginTop="16dp"
        android:text="@string/term_title" />

    <Spinner
        android:id="@+id/term_spinner"
        style="@style/SpinnerStyle"
        android:layout_marginBottom="16dp" />
</LinearLayout>
