<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="bd.edu.daffodilvarsity.classorganizer.activity.EditActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/modify_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_modify"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/modify_appbar_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingLeft="36dp"
                android:paddingRight="16dp"
                android:paddingStart="36dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingStart="3dp"
                    android:paddingTop="16dp"
                    android:text="@string/enter_course_code"
                    android:textColor="#E0E0E0"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/add_course_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/course_code"
                    android:textColor="@android:color/white"
                    android:theme="@style/Theme.edit.darkback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingStart="3dp"
                    android:paddingTop="16dp"
                    android:text="@string/enter_course_title"
                    android:textColor="#E0E0E0"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/add_course_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/course_title_hint"
                    android:textColor="@android:color/white"
                    android:theme="@style/Theme.edit.darkback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingStart="3dp"
                    android:paddingTop="16dp"
                    android:text="@string/enter_initial"
                    android:textColor="#E0E0E0"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/add_initial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/teacher_initial_hint"
                    android:textColor="@android:color/white"
                    android:theme="@style/Theme.edit.darkback" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingTop="16dp"
                    android:text="@string/choose_weekday_label"
                    android:textColor="#9E9E9E"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/add_week_day"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:paddingEnd="0dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="0dp"
                    android:paddingStart="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingTop="16dp"
                    android:text="@string/enter_room_no"
                    android:textColor="#9E9E9E"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/add_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/room_no_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="3dp"
                            android:paddingTop="16dp"
                            android:text="@string/starting_time"
                            android:textColor="#9E9E9E"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/add_time_start"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="left"
                            android:paddingLeft="3dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="3dp"
                            android:paddingTop="16dp"
                            android:text="@string/ending_time"
                            android:textColor="#9E9E9E"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/add_time_end"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="left"
                            android:paddingLeft="3dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>