<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <!--COMING SOON TODO-->
    <!--<TextView-->
    <!--android:id="@+id/program_spinner_label"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="@string/program_title"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:textSize="18sp" />-->

    <!--<Spinner-->
    <!--android:id="@+id/program_selection"-->
    <!--android:layout_width="72dp"-->
    <!--android:layout_height="32dp"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@color/md_grey_300"-->
    <!--android:completionThreshold="1" />-->

    <TextView
        android:id="@+id/section_spinner_label"
        style="@style/SpinnerTitle"
        android:text="@string/section_title" />

    <Spinner
        android:id="@+id/section_selection"
        style="@style/SpinnerStyle"
        android:completionThreshold="1" />

    <TextView
        android:id="@+id/level_spinner_label"
        style="@style/SpinnerTitle"
        android:layout_marginTop="16dp"
        android:text="@string/level_title" />

    <Spinner
        android:id="@+id/level_spinner"
        style="@style/SpinnerStyle" />

    <TextView
        android:id="@+id/term_spinner_label"
        style="@style/SpinnerTitle"
        android:layout_marginTop="16dp"
        android:text="@string/term_title" />

    <Spinner
        android:id="@+id/term_spinner"
        style="@style/SpinnerStyle"
        android:layout_marginBottom="16dp" />
</LinearLayout>
