<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/search_option_routine_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        style="@style/SearchPageTitle"
        android:text="@string/select_search_options"
        android:layout_gravity="center"
        />
    <Spinner
        android:id="@+id/search_option_room_type"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_margin="8dp"
        android:background="@color/md_grey_200"
        android:layout_gravity="center"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/search_option_room_by_room_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/search_room_input_title"
                style="@style/SearchPageTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_room_no"
                />
            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/search_room_input"
                android:layout_below="@id/search_room_input_title"
                android:layout_margin="8dp"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/search_option_room_by_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/search_room_select_day_title"
                style="@style/SearchPageTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/choose_weekday_label"
                />
            <Spinner
                android:id="@+id/search_option_room_weekday"
                android:layout_below="@id/search_room_select_day_title"
                android:layout_width="220dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@color/md_grey_200"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/search_room_select_time_title"
                android:layout_below="@id/search_option_room_weekday"
                style="@style/SearchPageTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/starting_time"
                />
            <Spinner
                android:id="@+id/search_option_room_time"
                android:layout_below="@id/search_room_select_time_title"
                android:layout_width="220dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@color/md_grey_200"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"/>
        </RelativeLayout>
    </FrameLayout>




</LinearLayout>